[gd_scene load_steps=3 format=3 uid="uid://cphufw4hs0bks"]

[ext_resource type="Script" path="res://Scripts/Enemy_related/DarkAngelSpawn.gd" id="1_xhnkc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5f3xx"]
radius = 14.0

[node name="DarkAngelSpawn" type="Area2D" node_paths=PackedStringArray("spawn_location") groups=["DarkAngelSpawn"]]
collision_layer = 1026
collision_mask = 1026
script = ExtResource("1_xhnkc")
spawn_location = NodePath("DarkAngelSpawnLocation")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5f3xx")
debug_color = Color(0.699752, 0.48961, 0.14081, 0.42)

[node name="DarkAngelSpawnLocation" type="Marker2D" parent="."]
gizmo_extents = 0.0

[node name="DarkAngelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Enemy_related/dark_angel.tscn")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
